small improvements in mockups

--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -44,7 +44,7 @@ Now, some mockups of the main pages of the platform will be presented, organized
         \includegraphics[width=0.8\textwidth]{Mockups/6_educator_create_tournament.png}
         \caption{Page used from educators to create a new tournament}
     \end{figure}
-    The tournament page offers to the educator owning the tournament the possibility to manage it. He will be able to click the "Add collaborator" button to add another educator to the tournament by username. Moreover, the page offers the "collaborators" tab that can be used to check and manage the list of collaborators. The last tab called "leaderboard" allows the educator to check the ranking of the students enrolled in the tournament. However, the main tournament page contains the list of all the battles created within the tournament.  By clicking on a specific battle, the educator will be redirected to the battle's page. Most importantly, the educator can create a battle by clicking on "Create battle" button.\\
+    The tournament page offers to the educator owning the tournament the possibility to manage it. He will be able to click the "Add collaborator" button to add another educator to the tournament by email address. Moreover, the page offers the "collaborators" tab that can be used to check and manage the list of collaborators. The last tab called "leaderboard" allows the educator to check the ranking of the students enrolled in the tournament. However, the main tournament page contains the list of all the battles created within the tournament.  By clicking on a specific battle, the educator will be redirected to the battle's page. Most importantly, the educator can create a battle by clicking on "Create battle" button.\\
     The student's tournament page will share most of the content, but the options to manage the tournament. The same page, if the tournament is not started yet, offers the possibility to the student to subscribe to the tournament and by default shows a list of partipants. \\
     \begin{figure}[H]
         \centering
@@ -70,7 +70,7 @@ Now, some mockups of the main pages of the platform will be presented, organized
         \includegraphics[width=0.8\textwidth]{Mockups/10_educator_create_battle.png}
         \caption{Page used from educators to create a new battle}
     \end{figure}
-    When a battle is in subscription phase, the battle's page will offer to the student the options to subscribe to it by creating a new team or joining an already existing one. If the student decides to create the team, he will be asked to input the name of the team and its privacy setting. Instead, if the student want to join a team, the system will ask him to insert the name of the team (if public) or the invite code (if private). The page will also show the list of all the teams enrolled in the battle, to facilitate the team formation.\\
+    When a battle is in subscription phase, the battle's page will offer to the student the options to subscribe to it by creating a new team or joining an already existing one. If the student decides to create the team, he will be asked to input the name of the team and its privacy setting. Instead, if the student want to join a team, the system will ask him to insert the name of the team (if public) or the invite code (if private). The page will also show the list of all the teams enrolled in the battle, to facilitate the team formation. Teams can be clicked in the leaderboard and a small pop-up with the list of members will be shown.\\
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.8\textwidth]{Mockups/11_student_battle_subscription.png}
@@ -94,7 +94,8 @@ Now, some mockups of the main pages of the platform will be presented, organized
         \includegraphics[width=0.8\textwidth]{Mockups/14_student_battle_submission.png}
         \caption{Page used from students when a battle is in submission phase}
     \end{figure}
-    The team page, accessible only to students of team, will contain all important settings needed to properly setup the GitHub repository and evaluation information about the team's last submission. It will show also some statistics about past submissions to facilitate the tracking of the team's performances.\\
+    The team page, accessible only to students of team, will contain all important settings needed to properly setup the GitHub repository and evaluation information about the team's last submission. It will show also some statistics about past submissions to facilitate the tracking of the team's performances.
+    By clicking on "Team members" box, the list of teammates will show up, with related commits count.\\
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.8\textwidth]{Mockups/15_student_team.png}
