updated requirements, minor language change in overview

--- a/RASD/Files/overview.tex
+++ b/RASD/Files/overview.tex
@@ -120,7 +120,7 @@ The system sends notifications (by means of emails) to its users in the followin
 
 \subsection{User characteristics}
 \subsubsection{User types}
-As we’ve already said many times, the system is meant to be used by 2 kind of users:
+As previously mentioned, the system is meant to be used by 2 kind of users:
 \begin{itemize}
     \item \textbf{Educators}: this is the type of users that uses the platform to create competitions. They can create tournaments and battles and, eventually, evaluate the solutions provided by students. They must have a good knowledge of how to create valid automation scripts and have a basic understanding of how to use a web browser.
     \item \textbf{Students}: these are the users that will use the platform to be evaluated or simply to take part in a competition. They can subscribe to tournaments and battles, join groups of students and submit solutions. They are required to have a good knowledge of how to properly setup a GitHub repository and of all the programming languages involved in the battles.
