--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -123,13 +123,13 @@ The software does not require any other hardware interface different than person
 Some of the functionalities provided by the system exploit specific interfaces to work. These are:
 \begin{itemize}
     \item \textbf{GitHub interface}: the system must be able to interface with GitHub API to create the original repository for each battle and to pull code submissions.
-    \item \textbf{Static analysis tools}: some of the aspects that have to be evaluated require the execution of some static analysis method over the provided code. In this case, the platform utilizes external services directly provided by third-party organizations.
+    \item \textbf{Static analysis tools}: some of the aspects that have to be evaluated require the execution of some static analysis method over the provided code. In this case, the platform utilizes external services directly provided by third-party organizations. The external services must support the set of languages supported by CKB the platform.
 \end{itemize}
 Each of these interfaces are implemented by correctly setting and utilizing specific API calls to the involved services that will be included inside the platform’s inner processes.
 
 Moreover, in order to be notified about the submission of a new solution, the system itself must expose a REST endpoint that will be invoked by the automated GitHub Actions workflow set up by each team on their repository.
 \subsubsection{Communication Interfaces}
-From the moment that most of the system’s services are provided through the platform’s website and REST API calls, no other protocol than normal HTTP should be needed. Anyway, it is worth mentioning that communication between the system and user is achieved through notifications sent via mail using an external mail service provider.
+Given that the majority of the system's services are provided through the platform's website and REST API calls, no other protocol than HTTP should be needed. Anyway, it is worth mentioning that part of the communication between the system and user is achieved through notifications sent via mail using an external mail service provider.
 
 \subsection{Functional Requirements}
 The main requirements the system has to fulfill are the following:
@@ -152,7 +152,7 @@ The main requirements the system has to fulfill are the following:
     \item System shall allow educator (battle creator) to select relevant aspects of code quality to be extracted through static analysis.
     \item System shall notify all users enrolled to a tournament about a newly created battle.
     \item System shall integrate with external static analysis tools through proper API calls.
-    \item System shall create the GitHub repository of a battle as soon as the registration phase closes.
+    \item System shall create the GitHub repository of a battle as soon as the registration phase closes, sending its link to all involved students.
     \item System shall assign to each submission sent before the submission deadline a score (natural number between 0 and 100) combining correctness, timeliness and code quality \textit{as soon as possible}.
     \item System shall allow educator (battle creator) to set a manual score (natural number between 0 and 100) to the last valid team’s submission during the consolidation stage of the battle.
     \item System shall compute a final score combining automatic and manual score (if available) for each team after the consolidation stage if expected or after the submission deadline otherwise.
@@ -230,7 +230,7 @@ $\bullet$ \textbf{G1}: Allow students to participate to collaborative programmin
         & \textbf{R2}: System shall allow user to log in \\
         & \textbf{R7}: System shall notify all students enrolled to the platform about a newly created tournament \\
         & \textbf{R17}: System shall notify all users enrolled to a tournament about a newly created battle \\
-        & \textbf{R19}: System shall create the GitHub repository of a battle as soon as the registration phase closes \\
+        & \textbf{R19}: System shall create the GitHub repository of a battle as soon as the registration phase closes, sending its link to all involved students \\
         & \textbf{R27}: System shall allow all users to see the list of ongoing tournaments \\
         & \textbf{R31}: System shall allow student to enroll to a tournament within the subscription deadline \\
         & \textbf{R32}: System shall allow student to create a team within the registration deadline \\
@@ -297,7 +297,7 @@ $\bullet$ \textbf{G3}: Allow the system to automatically evaluate students' subm
         \hline
         \textbf{Requirements} 
         & \textbf{R18}: System shall integrate with external static analysis tools through proper API calls \\
-        & \textbf{R19}: System shall create the GitHub repository of a battle as soon as the registration phase closes \\
+        & \textbf{R19}: System shall create the GitHub repository of a battle as soon as the registration phase closes, sending its link to all involved students \\
         & \textbf{R20}: System shall assign to each submission sent before the submission deadline a score (natural number between 0 and 100) combining correctness, timeliness and code quality \textit{as soon as possible} \\
         & \textbf{R22}: System shall compute a final score combining automatic and manual score (if available) for each team after the consolidation stage if expected or after the submission deadline otherwise \\
         & \textbf{R37}: System shall allow team members to set their the repository URL \\
