--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -143,7 +143,7 @@ The main requirements the system has to fulfill are the following:
     \item System shall allow educator (tournament creator) to end the tournament.
     \item System shall allow educator (tournament creator) to add another educator as collaborator to the tournament.
     \item System shall allow educator (tournament creator or collaborator) to create a battle for the tournament.
-    \item System shall allow educator (tournament creator or collaborator) to upload the Code Kata of the battle.
+    \item System shall allow educator (battle creator) to upload the Code Kata of the battle.
     \item System shall allow educator (battle creator) to set minimum and maximum number of students per group allowed for the battle.
     \item System shall allow educator (battle creator) to set the registration deadline of the battle.
     \item System shall allow educator (battle creator) to set the submission deadline of the battle.
@@ -154,7 +154,7 @@ The main requirements the system has to fulfill are the following:
     \item System shall create the GitHub repository of a battle as soon as the registration phase closes, sending its link to all involved students.
     \item System shall assign to each submission sent before the submission deadline a score (natural number between 0 and 100) combining correctness, timeliness and code quality \textit{as soon as possible}.
     \item System shall allow educator (battle creator) to set a manual score (natural number between 0 and 100) to the last valid team’s submission during the consolidation stage of the battle.
-    \item System shall compute a final score combining automatic and manual score (if available) for each team after the consolidation stage if expected or after the submission deadline otherwise.
+    \item System shall compute a final score combining automatic and manual score (if available) for each team if manual evaluation is enabled.
     \item System shall update the battle teams’ ranks right after a new score is available.
     \item System shall notify all students participating to the battle about the availability of the final battle rank.
     \item System shall update the tournament students’ scores as the sum of all the battle scores received during the tournament once the final battle rank becomes available.
@@ -174,6 +174,7 @@ The main requirements the system has to fulfill are the following:
     \item System should offer an external API which, when invoked, will notify the platform about a new commit on a team’s GitHub repository.
     \item System shall allow the educator to access the code of the submitted solutions.
     \item System shall generate a unique invite code for each team.
+    \item System shall allow educator (battle creator) to close the consolidation stage of the battle if manual evaluation is enabled.
 \end{enumerate}
 \subsubsection{Use cases}
 \begin{center}
@@ -272,7 +273,7 @@ $\bullet$ \textbf{G2}: Allow educators to create programming challenges
         & \textbf{R7}: System shall allow educator (tournament creator) to end the tournament \\
         & \textbf{R8}: System shall allow educator (tournament creator) to add another educator as collaborator to the tournament \\
         & \textbf{R9}: System shall allow educator (tournament creator or collaborator) to create a battle for the tournament \\
-        & \textbf{R10}: System shall allow educator (tournament creator or collaborator) to upload the Code Kata of the battle \\
+        & \textbf{R10}: System shall allow educator (battle creator) to upload the Code Kata of the battle \\
         & \textbf{R11}: System shall allow educator (battle creator) to set minimum and maximum number of students per group allowed for the battle \\
         & \textbf{R12}: System shall allow educator (battle creator) to set the registration deadline of the battle \\
         & \textbf{R13}: System shall allow educator (battle creator) to set the submission deadline of the battle \\
@@ -299,7 +300,7 @@ $\bullet$ \textbf{G3}: Allow the system to automatically evaluate students' subm
         & \textbf{R17}: System shall integrate with external static analysis tools through proper API calls \\
         & \textbf{R18}: System shall create the GitHub repository of a battle as soon as the registration phase closes, sending its link to all involved students \\
         & \textbf{R19}: System shall assign to each submission sent before the submission deadline a score (natural number between 0 and 100) combining correctness, timeliness and code quality \textit{as soon as possible} \\
-        & \textbf{R21}: System shall compute a final score combining automatic and manual score (if available) for each team after the consolidation stage if expected or after the submission deadline otherwise \\
+        & \textbf{R21}: System shall compute a final score combining automatic and manual score (if available) for each team if manual evaluation is enabled \\
         & \textbf{R36}: System shall allow team members to set their the repository URL \\
         & \textbf{R37}: System shall generate a unique API token for each team \\
         & \textbf{R38}: System should offer an external API which, when invoked, will notify the platform about a new commit on a team’s GitHub repository \\
@@ -328,6 +329,7 @@ $\bullet$ \textbf{G4}: Allow educators to manually evaluate students' submission
         & \textbf{R14}: System shall allow educator (battle creator) to enable/disable optional manual evaluation for the battle \\
         & \textbf{R20}: System shall allow educator (battle creator) to set a manual score (natural number between 0 and 100) to the last valid team’s submission during the consolidation stage of the battle \\
         & \textbf{R39}: System shall allow the educator to access the code of the submitted solutions \\
+        & \textbf{R41}: System shall allow educator (battle creator) to close the consolidation stage of the battle if manual evaluation is enabled \\
         \hline
         \textbf{Domain \newline Assumptions} 
         & \textbf{D1}: Users have access to a stable and reliable internet connection to interact with the CKB platform \\
@@ -347,7 +349,7 @@ $\bullet$ \textbf{G5}: Allow students to track their performance
         & \textbf{R17}: System shall integrate with external static analysis tools through proper API calls \\
         & \textbf{R19}: System shall assign to each submission sent before the submission deadline a score (natural number between 0 and 100) combining correctness, timeliness and code quality \textit{as soon as possible} \\
         & \textbf{R20}: System shall allow educator (battle creator) to set a manual score (natural number between 0 and 100) to the last valid team’s submission during the consolidation stage of the battle \\
-        & \textbf{R21}: System shall compute a final score combining automatic and manual score (if available) for each team after the consolidation stage if expected or after the submission deadline otherwise \\
+        & \textbf{R21}: System shall compute a final score combining automatic and manual score (if available) for each team if manual evaluation is enabled \\
         & \textbf{R22}: System shall update the battle teams’ ranks right after a new score is available \\
         & \textbf{R23}: System shall notify all students participating to the battle about the availability of the final battle rank \\
         & \textbf{R24}: System shall update the tournament students’ scores as the sum of all the battle scores received during the tournament once the final battle rank becomes available \\
